<resources>
    <string name="app_name" translatable="false">Ad Manager Booster Notif</string>
    <string name="permdesc_flashlight">For enabling flashlight</string>
    
    <string name="p1">Boost</string>
    <string name="p2">Launcher</string>
    <string name="p3">Battery</string>
    <string name="p4">Data</string>
    <string name="p5">Torch</string>
    <string name="p6">Wi-fi</string>

    <!-- BatteryBoostActivity -->
    <string name="bba_scanning">Scanning...</string>
    <string name="bba_optimized">Battery Life Optimized</string>
    <string name="bba_result">%d Apps Scanned</string>

    <!-- RamBoostActivity -->
    <string name="rba_clearing">Clearing...</string>
    <string name="rba_cleared">%d MB Cleaned</string>
    <string name="rba_result">%s / %s</string>
</resources>
