<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:layout_centerVertical="true"
    android:background="#ffffff"
    android:baselineAligned="false"
    android:clickable="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="5dp">


    <LinearLayout
        android:id="@+id/p1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/booster_selectable_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i1"
            style="@style/booster_image"
            android:src="@drawable/ram_active" />

        <TextView
            android:id="@+id/t1"
            style="@style/booster_text"
            android:text="@string/p1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/booster_selectable_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i3"
            style="@style/booster_image"
            android:src="@drawable/battery_active" />

        <TextView
            android:id="@+id/t3"
            style="@style/booster_text"
            android:text="@string/p3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/booster_selectable_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i4"
            style="@style/booster_image"
            android:src="@drawable/data_active" />

        <TextView
            android:id="@+id/t4"
            style="@style/booster_text"
            android:text="@string/p4" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/booster_selectable_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i5"
            style="@style/booster_image"
            android:src="@drawable/torch_passive" />

        <TextView
            android:id="@+id/t5"
            style="@style/booster_text"
            android:text="@string/p5" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p6"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/booster_selectable_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i6"
            style="@style/booster_image"
            android:src="@drawable/wifi_active" />

        <TextView
            android:id="@+id/t6"
            style="@style/booster_text"
            android:text="@string/p6" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/p2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/booster_selectable_bg"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/i2"
            style="@style/booster_image"
            android:src="@drawable/applauncher" />

        <TextView
            android:id="@+id/t2"
            style="@style/booster_text"
            android:text="@string/p2" />
    </LinearLayout>
</LinearLayout>